src/components/top-section-whomadeit.less
@import "../variables.less";

section#whomadeit {
  position: relative;
  padding-top: 3em;

  h2 {
    text-align: center;
    font-size: 2.82rem;
    margin-top: 0rem;
  }

  p.sub-headline {
    text-align: center;
  }

  .content {
    margin-top: 2em;
  }

  .author {
    border: 1px solid rgba(0, 0, 0, 0.3);
    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1), 0 3px 10px rgba(0, 0, 0, 0.07);
    max-width: 400px;
    margin: 0 auto;
  }

  .links {
    a {
      color: rgba(0, 0, 0, 0.4);
      font-size: 1.6rem;
      margin: 0 0.3rem;
      &:hover {
        color: #ff63c3;
      }
    }
  }

  .caption {
    margin-top: 1rem;
    font-style: italic;
  }

  .embed-container {
    position: relative;
    padding-bottom: 56.25%;
    height: 0;
    overflow: hidden;
    max-width: 100%;
  }
  .embed-container iframe,
  .embed-container object,
  .embed-container embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }
}

